Game:
 + Add new key to show mission panel (default: M)
 + Add new key to cycle through timer values (default: N)
 + Add default controls for controller (see README.md)
 + Add chat command “/help”, displays help for chat commands
 + Increase hedgehog limit to 64
 + Campaigns and missions now use the user's chosen custom clan colors
 + New default brown clan color for better contrast
 * Functionality of controllers restored
 * Fix crash when 2 or more controllers were connected
 * Fix hammer and pickhammer not digging correctly at wrap world edge
 * Fix drill rocket exploding when digging at bounce/wrap world edge
 * Fix freezer ray not working through wrap world edge
 * Fix freezer ray going through bounce world edge
 * Fix cake walking through bounce world edge
 * Fix cake walking through land when reaching wrap world edge
 * Laser sight now works properly through wrap world edge
 * Fix projectiles behaving incorrectly with land just behind the wrap world edge
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix some flakes disappearing in world wrap worlds while moving camera
 * Fix invisible projectile timer, attack bar, target on other side of wrap world edge
 * Fix attack bar drawn over GUI elements
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix bee weapon becoming unusable when hitting attack key in mid-air
 * Fix video recorder not working when game audio was disabled
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Fix /hta, /hsa and /hya commands not writing message in chat
 * Limit hedgehog health to 268435455 to prevent some bugs
 * Fix Sudden Death starting in the second turn of a round rather than the first
 * Prevent voices from being spoken directly before a victory voice